add adaptive zoos page

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="pets-container__card">
                     <div class="pets-container__card-top">
-                        <a class="pets-container__card-link" href="./pages/zoos-eagles/index.html"><img src="./assets/images/eagles.png" alt="eagles"></a>
+                        <a class="pets-container__card-link" href="./pages/zoos/eagles.html"><img src="./assets/images/eagles.png" alt="eagles"></a>
                     </div>
                     <div class="pets-container__card-bottom">
                         <h2 class="pets-container__card-title">Eagles</h2>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="pets-container__card">
                     <div class="pets-container__card-top">
-                        <a class="pets-container__card-link" href="./pages/zoos-gorillas/index.html"><img src="./assets/images/gorrilas.png" alt="gorillas"></a>
+                        <a class="pets-container__card-link" href="./pages/zoos/gorillas.html"><img src="./assets/images/gorrilas.png" alt="gorillas"></a>
                     </div>
                     <div class="pets-container__card-bottom">
                         <h2 class="pets-container__card-title">Gorillas</h2>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="pets-container__card">
                     <div class="pets-container__card-top">
-                        <a class="pets-container__card-link" href="./pages/zoos-alligators/index.html"><img src="./assets/images/aligators.png" alt="aligators"></a>
+                        <a class="pets-container__card-link" href="./pages/zoos/alligators.html"><img src="./assets/images/aligators.png" alt="aligators"></a>
                     </div>
                     <div class="pets-container__card-bottom">
                         <h2 class="pets-container__card-title">Aligators</h2>
@@ -205,9 +205,9 @@
         <section class="animals">
             <h2 class="animals-title">Look at these beautiful animals</h2>
             <a href="./pages/zoos/pandas.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
-            <a href="./pages/zoos-gorillas/index.html" class="animals-links"><img src="./assets/images/gorrilas.png" class="animals-img" alt=""></a>
-            <a href="./pages/zoos-eagles/index.html" class="animals-links"><img src="./assets/images/eagles.png" class="animals-img" alt=""></a>
-            <a href="./pages/zoos-alligators/index.html" id="zoos-alligators" class="animals-links"><img src="./assets/images/aligators.png" class="animals-img" alt=""></a>
+            <a href="./pages/zoos/gorillas.html" class="animals-links"><img src="./assets/images/gorrilas.png" class="animals-img" alt=""></a>
+            <a href="./pages/zoos/eagles.html" class="animals-links"><img src="./assets/images/eagles.png" class="animals-img" alt=""></a>
+            <a href="./pages/zoos/alligators.html" id="zoos-alligators" class="animals-links"><img src="./assets/images/aligators.png" class="animals-img" alt=""></a>
             <a href="" class="animals-links"><img src="./assets/images/elephants.png" class="animals-img" alt=""></a>
             <a href="" class="animals-links"><img src="./assets/images/lemurs.png" class="animals-img" alt=""></a>
             <a href="./pages/zoos/pandas.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
