--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -14,7 +14,7 @@
     <section class="header-hero">
         <section class="header-wrapper">     
             <header class="header">
-                <a class="logo" href="">
+                <a class="logo" href="../../index.html">
                     <p class="logo-title">online</p>
                     <div class="logo-container">
                         <p class="logo-title">Z</p>
@@ -24,7 +24,7 @@
                 <nav class="nav header-nav">
                     <a href="../../index.html" class="nav-link">About</a>
                     <a href="" class="nav-link">Map</a>
-                    <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
+                    <a href="../zoos/pandas.html" class="nav-link">Zoos</a>
                     <button class="nav-link" id="contact-open__header">Contact us</button>
                     <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
                 </nav>
@@ -40,7 +40,7 @@
         <section class="menu">
             <a href="../../index.html" class="menu-link">About</a>
             <a href="" class="menu-link">Map</a>
-            <a href="../zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <a href="../zoos/pandas.html" class="menu-link">Zoos</a>
             <button class="menu-link" id="contact-open__menu">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
             <button class="menu-link" id="login-open-2">my account</button>
@@ -50,16 +50,16 @@
         <h2 class="map-title">Choose your favorite Animal</h2>
         <div class="map-container">
             <img class="map-image" src="../../assets/images/Map.png" alt="Map">
-            <a href="../zoos-eagles/index.html" class="map-card map-card-1">
+            <a href="../zoos/eagles.html" class="map-card map-card-1">
                 <img class="map-card__img" src="../../assets/images/eagles.png" alt="">
             </a>
-            <a href="../zoos-alligators/index.html" class="map-card map-card-2">
+            <a href="../zoos/alligators.html" class="map-card map-card-2">
                 <img class="map-card__img" src="../../assets/images/aligators.png" alt="">
             </a>
-            <a href="../zoos-gorillas/index.html" class="map-card map-card-3">
+            <a href="../zoos/gorillas.html" class="map-card map-card-3">
                 <img class="map-card__img" src="../../assets/images/gorrilas.png" alt="">
             </a>
-            <a href="../zoos-pandas/index.html" class="map-card map-card-4">
+            <a href="../zoos/pandas.html" class="map-card map-card-4">
                 <img class="map-card__img" src="../../assets/images/Pandas.png" alt="">
             </a>
         </div>
