--- a/pages/zoos/gorillas.html
+++ b/pages/zoos/gorillas.html
@@ -13,39 +13,39 @@
 </head>
 
 <body>
-    <section class="header-hero">
-        <section class="header-wrapper">     
-            <header class="header">
-                <a class="logo" href="../../index.html">
-                    <p class="logo-title">online</p>
-                    <div class="logo-container">
-                        <p class="logo-title">Z</p>
-                        <img src="../../assets/icons/logo.svg" class="logo-icon">
-                    </div>
-                </a>
-                <nav class="nav header-nav">
-                    <a href="../../index.html" class="menu-link">About</a>
-                    <a href="../map/index.html" class="menu-link">Map</a>
-                    <a href="" class="menu-link">Zoos</a>
-                    <button class="nav-link" id="contact-open__header">Contact us</button>
-                    <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-                </nav>
-                <div class="header-container">
-                    <input type="text" class="header-container__input">
-                    <button class="header-container__search"></button>
-                    <button id="login-open" class="header-container__login">log in</button>
-                    <button id="signup-open" class="header-container__signup">sign up</button>
-                    <button id="menu-open" class="header-container__btn"></button>
+    <section class="header-wrapper">     
+        <header class="header">
+            <a class="logo" href="../../index.html">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="../../assets/icons/logo.svg" class="logo-icon">
                 </div>
-            </header>
-        </section>
-        <section class="menu">
-            <a href="../../index.html" class="menu-link">About</a>
-            <a href="../map/index.html" class="menu-link">Map</a>
-            <a href="" class="menu-link">Zoos</a>
-            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
-            <button class="menu-link" id="login-open-2">my account</button>
-        </section>
+            </a>
+            <nav class="nav header-nav">
+                <a href="../../index.html" class="nav-link">About</a>
+                <a href="../map/index.html" class="nav-link">Map</a>
+                <a href="" class="nav-link">Zoos</a>
+                <button class="nav-link" id="contact-open__header">Contact us</button>
+                <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+            </nav>
+            <div class="header-container">
+                <input type="text" class="header-container__input">
+                <button class="header-container__search"></button>
+                <button id="login-open" class="header-container__login">log in</button>
+                <button id="signup-open" class="header-container__signup">sign up</button>
+                <button id="menu-open" class="header-container__btn"></button>
+            </div>
+        </header>
+    </section>
+    <section class="menu">
+        <a href="../../index.html" class="menu-link">About</a>
+        <a href="../map/index.html" class="menu-link">Map</a>
+        <a href="" class="menu-link">Zoos</a>
+        <button class="menu-link" id="contact-open__menu">Contact us</button>
+        <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
+        <button class="menu-link" id="login-open-2">my account</button>
+    </section>
     <section class="main-section">
         <aside class="aside">
             <div class="aside-container">
@@ -86,8 +86,8 @@
         <section class="sidecam">
             <h3 class="sidecam-subtitle">Side cameras</h3>
             <div class="sidecam-container">
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe sidecam-container__iframe-2" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe sidecam-container__iframe-3" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="sidecam-container__listener">
                     <button class="sidecam-container__listener-btn"></button>
