--- a/pages/zoos/pandas.html
+++ b/pages/zoos/pandas.html
@@ -23,9 +23,9 @@
                     </div>
                 </a>
                 <nav class="nav header-nav">
-                    <a href="../../index.html" class="menu-link">About</a>
-                    <a href="../map/index.html" class="menu-link">Map</a>
-                    <a href="" class="menu-link">Zoos</a>
+                    <a href="../../index.html" class="nav-link">About</a>
+                    <a href="../map/index.html" class="nav-link">Map</a>
+                    <a href="" class="nav-link">Zoos</a>
                     <button class="nav-link" id="contact-open__header">Contact us</button>
                     <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
                 </nav>
@@ -87,8 +87,8 @@
             <h3 class="sidecam-subtitle">Side cameras</h3>
             <div class="sidecam-container">
                 <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe sidecam-container__iframe-2" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe sidecam-container__iframe-3" width="380" height="210" src="https://www.youtube.com/embed/OWH3_o75TEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="sidecam-container__listener">
                     <button class="sidecam-container__listener-btn"></button>
                     <button class="sidecam-container__listener-btn"></button>
