--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -7,8 +7,10 @@
     <title>Map</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./media/media.css">
-    <link rel="stylesheet" href="../../assets/others/others.css">
-    <link rel="stylesheet" href="../../assets/others/media/media.css">
+    <link rel="stylesheet" href="../../styles/global/global.css">
+    <link rel="stylesheet" href="../../styles/global/media/media.css">
+    <link rel="stylesheet" href="../../styles/modals/modals.css">
+    <link rel="stylesheet" href="../../styles/modals/media/media.css">
 </head>
 <body>
     <section class="header-hero">
@@ -138,11 +140,11 @@
             </div>
             <div class="register-loginThrough">
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/google.svg" alt="">
+                    <img src="../../assets/icons/modals/google.svg" alt="">
                     Google Sign in    
                 </button>
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/facebook.svg" alt="">
+                    <img src="../../assets/icons/modals/facebook.svg" alt="">
                     Facebook Sign in   
                 </button>
             </div>
@@ -192,11 +194,11 @@
             </div>
             <div class="register-loginThrough">
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/google.svg" alt="">
+                    <img src="../../assets/icons/modals/google.svg" alt="">
                     Google Sign in    
                 </button>
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/facebook.svg" alt="">
+                    <img src="../../assets/icons/modals/facebook.svg" alt="">
                     Facebook Sign in   
                 </button>
             </div>
@@ -217,6 +219,6 @@
     </section>
     <section class="substrate"></section>
 
-    <script type="module" src="../../script.js"></script>
+    <script type="module" src="../../scripts/script.js"></script>
 </body>
 </html>
