--- a/pages/zoos/pandas.html
+++ b/pages/zoos/pandas.html
@@ -8,8 +8,10 @@
     <title>Zoos</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/media/media.css">
-    <link rel="stylesheet" href="../../assets/others/others.css">
-    <link rel="stylesheet" href="../../assets/others/media/media.css">
+    <link rel="stylesheet" href="../../styles/global/global.css">
+    <link rel="stylesheet" href="../../styles/global/media/media.css">
+    <link rel="stylesheet" href="../../styles/modals/modals.css">
+    <link rel="stylesheet" href="../../styles/modals/media/media.css">
 </head>
 
 <body>
@@ -51,7 +53,7 @@
             <div class="aside-container">
                 <a href="pandas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/Pandas.png" alt="">
-                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
+                    <img class="aside-link__bg" src="../../assets/images/link-bg.png" alt="">
                 </a>
                 <h3 class="aside-name">Pandas</h3>
             </div>
@@ -235,12 +237,12 @@
             <input type="text" class="donate-card__input-3" id="donate-card__input">
         </div>
         <div id="donate-card">
-            <img id="donate-card__icons" src="../../assets/icons/Pay-methods.svg" alt="">
+            <img id="donate-card__icons" src="../../assets/icons/modals/Pay-methods.svg" alt="">
             <p class="text-error" id="donate-card__text-4">Write your all card info!<br> (Number, MM, YY and CVC)</p>
             <p class="text-error" id="donate-card__text-5">The card number is written incorrectly.<br> Example: 8203 5432 7854 2519</p>
             <div id="donate-card__pay">
                 <div id="donate-card__pay-container-1">
-                    <img src="../../assets/icons/card.svg" alt="">
+                    <img src="../../assets/iconsmodals//card.svg" alt="">
                     <input placeholder="Card Number" id="donate-card__pay-input-1" class="donate-card__pay-input-1">
                 </div>
                 <div id="donate-card__pay-container-2">
@@ -275,11 +277,11 @@
             </div>
             <div class="register-loginThrough">
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/google.svg" alt="">
+                    <img src="../../assets/icons/modals/google.svg" alt="">
                     Google Sign in    
                 </button>
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/facebook.svg" alt="">
+                    <img src="../../assets/icons/modals/facebook.svg" alt="">
                     Facebook Sign in   
                 </button>
             </div>
@@ -329,11 +331,11 @@
             </div>
             <div class="register-loginThrough">
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/google.svg" alt="">
+                    <img src="../../assets/icons/modals/google.svg" alt="">
                     Google Sign in    
                 </button>
                 <button class="register-loginThrough__btn">
-                    <img src="../../assets/icons/facebook.svg" alt="">
+                    <img src="../../assets/icons/modals/facebook.svg" alt="">
                     Facebook Sign in   
                 </button>
             </div>
@@ -354,7 +356,7 @@
     </section>
     <section class="substrate"></section>
 
-    <script type="module" src="../../script.js"></script>
+    <script type="module" src="../../scripts/script.js"></script>
 </body>
 
 </html>
