--- a/pages/zoos/eagles.html
+++ b/pages/zoos/eagles.html
@@ -8,8 +8,10 @@
     <title>Zoos</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/media/media.css">
-    <link rel="stylesheet" href="../../assets/others/others.css">
-    <link rel="stylesheet" href="../../assets/others/media/media.css">
+    <link rel="stylesheet" href="../../styles/global/global.css">
+    <link rel="stylesheet" href="../../styles/global/media/media.css">
+    <link rel="stylesheet" href="../../styles/modals/modals.css">
+    <link rel="stylesheet" href="../../styles/modals/media/media.css">
 </head>
 
 <body>
@@ -57,7 +59,7 @@
             <div class="aside-container">
                 <a href="eagles.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/eagles.png" alt="">
-                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
+                    <img class="aside-link__bg" src="../../assets/images/link-bg.png" alt="">
                 </a>
                 <h3 class="aside-name">eagles</h3>
             </div>
@@ -354,7 +356,7 @@
     </section>
     <section class="substrate"></section>
 
-    <script type="module" src="../../script.js"></script>
+    <script type="module" src="../../scripts/script.js"></script>
 </body>
 
 </html>
