--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </header>
         </section>
-        <section class="menu menu-hidden menu-visible">
+        <section id="menu" class="menu">
             <a href="" class="menu-link">About</a>
             <a href="./pages/map/index.html" class="menu-link">Map</a>
             <a href="./pages/zoos/pandas.html" class="menu-link">Zoos</a>
