--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -87,7 +87,7 @@
             <nav class="nav footer-nav">
                 <a href="../../index.html" class="nav-link">About</a>
                 <a href="" class="nav-link">Map</a>
-                <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
+                <a href="../zoos/pandas.html" class="nav-link">Zoos</a>
                 <button class="nav-link" id="contact-open__footer">Contact us</button>
                 <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
             </nav>
