--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -39,7 +39,7 @@
                 </div>
             </header>
         </section>
-        <section class="menu">
+        <section id="menu" class="menu">
             <a href="../../index.html" class="menu-link">About</a>
             <a href="" class="menu-link">Map</a>
             <a href="../zoos/pandas.html" class="menu-link">Zoos</a>
