--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <input type="number" class="donate-card__pay-input_card-number-4" id="donate-card__pay-input_card-number">
                 </div>
                 <div id="donate-card__pay-container-2">
-                    <input placeholder="MM" id="donate-card__pay-input" class="donate-card__pay-input-2">
+                    <input placeholder="MM" type="number" id="donate-card__pay-input" class="donate-card__pay-input-2">
                     /  
                     <input placeholder="YY" type="number" id="donate-card__pay-input" class="donate-card__pay-input-3">
                     <input placeholder="CVC" type="number" id="donate-card__pay-input" class="donate-card__pay-input-4">
